fixes bug 189672 "100% CPU, exhaust system resource, freeze mozilla, while displaying page" r=dougt sr=bzbarsky a=dbaron